# tiago_lfc

./: README.md  package.xml  setup.cfg  setup.py
config/: joint_state_estimator_params.yaml  linear_feedback_controller_params.yaml  pd_plus_controller_params.yaml
launch/: launch_controllers.launch.py  pd_plus_controller.launch.py  switch_to_lfc_controllers.launch.py
tiago_lfc/: lfc_minimal_example.py  mpc_controller.py  mpc_node.py  test_loader.py  test_mpc_pure.py
tiago_lfc/config/: dummy_controllers.yaml
tiago_lfc/launch/: switch_to_lfc_controllers.launch.py  tiago_gazebo.launch.py
tiago_lfc/tools/: check_model_live.py  extract_urdf.py  model_utils.py
